--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <script src="js/scripts.js"></script>
 </head>
 <body>
-  <div class ="container">
-    <h1>
-    </h1>
-      <h2>
-      </h2>
-        <p>
-        </p>
-      <h2>
-      </h2> 
+  <div class="container">
+    <div class="jumbotron">
+      <div class="header"><h1>Interested in coding?</h1>
+        <div class="centerMed"><p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding language to learn.</p></div>
+      </div>
+      <span class="pushRight"><h1>We can help!</h1></span>
+    </div>
+    <img src="img/code2.jpg" class="headImage" at="photo of on-screen code up close">
+    </div>
+    <h1>Many prospective coders expend unnecessary time and energy stressing about choosing a language: <span class="medFont">until now</span></h1>
+      <p>We have developed a truly unique questionnaire that pairs users to the language that is best for them, whether they know it or not.</p>
+      <p>Simply fill out our custom tailored questionnaire to find out yours:</p>
   </div>
 </body>
