--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <title>Language Quiz</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -7,18 +8,74 @@
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
 </head>
+
 <body>
   <div class="container">
     <div class="jumbotron">
-      <div class="header"><h1>Interested in coding?</h1>
-        <div class="centerMed"><p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding language to learn.</p></div>
+      <div class="header">
+        <h1>Interested in coding?</h1>
+        <div class="centerMed">
+          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding
+            language to learn.</p>
+        </div>
       </div>
-      <span class="pushRight"><h1>We can help!</h1></span>
+      <span class="pushRight">
+        <h1>We can help!</h1>
+      </span>
     </div>
     <img src="img/code2.jpg" class="headImage" at="photo of on-screen code up close">
+    <h1>Many prospective coders expend unnecessary time and energy stressing about choosing a language: <span
+        class="medFont">until now</span></h1>
+    <h2>We have developed a truly unique questionnaire that pairs users to the language that is best for them, whether
+      they know it or not.</h2>
+    <h2>Simply fill out our custom tailored questionnaire to find out yours:</h2>
+    <h1>First Question</h1>
+    <select class="form-control-lg" id="firstQuestion">
+      <h2>
+        <option value="0">--</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </h2>
+    </select>
+    <h1>First Question</h1>
+    <select class="form-control-lg" id="firstQuestion">
+      <h2>
+        <option value="0">--</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </h2>
+    </select>
+    <h1>Second Question</h1>
+    <select class="form-control-lg" id="secondQuestion">
+      <h2>
+        <option value="0">--</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </h2>
+    </select>
+    <h1>Third Question</h1>
+    <select class="form-control-lg" id="thirdQuestion">
+      <h2>
+        <option value="0">--</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </h2>
+    </select>
+    <div id="result1">
+      <img src="img/javascript.png" id="js" alt="Image of JavaScript logo">
+      <p>JavaScript!</p>
     </div>
-    <h1>Many prospective coders expend unnecessary time and energy stressing about choosing a language: <span class="medFont">until now</span></h1>
-      <p>We have developed a truly unique questionnaire that pairs users to the language that is best for them, whether they know it or not.</p>
-      <p>Simply fill out our custom tailored questionnaire to find out yours:</p>
+    <div id="result2">
+      <img src="img/c.png" id="c" alt="Image of C# logo">
+      <p>C#!</p>
+    </div>
+    <div id="result3">
+      <img src="img/python.png" id="python" alt="Image of Python logo">
+      <p>Python!</p>
+    </div>
   </div>
 </body>
