Add document.ready function to jscripts and begin defining const variables.

--- a/index.html
+++ b/index.html
@@ -29,42 +29,45 @@
     <h2>We have developed a truly unique questionnaire that pairs users to the language that is best for them, whether
       they know it or not.</h2>
     <h2>Simply fill out our custom tailored questionnaire to find out yours:</h2>
-    <h1>First Question</h1>
-    <select class="form-control-lg" id="firstQuestion">
-      <h2>
-        <option value="0">--</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </h2>
-    </select>
-    <h1>First Question</h1>
-    <select class="form-control-lg" id="firstQuestion">
-      <h2>
-        <option value="0">--</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </h2>
-    </select>
-    <h1>Second Question</h1>
-    <select class="form-control-lg" id="secondQuestion">
-      <h2>
-        <option value="0">--</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </h2>
-    </select>
-    <h1>Third Question</h1>
-    <select class="form-control-lg" id="thirdQuestion">
-      <h2>
-        <option value="0">--</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </h2>
-    </select>
+    <div class="quiz">
+      <h1>First Question</h1>
+      <select class="form-control-lg" id="firstQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+      <h1>First Question</h1>
+      <select class="form-control-lg" id="firstQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+      <h1>Second Question</h1>
+      <select class="form-control-lg" id="secondQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+      <h1>Third Question</h1>
+      <select class="form-control-lg" id="thirdQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+    </div>
+    <button type="submit" id="submitButton">Get Results</button>
     <div id="result1">
       <img src="img/javascript.png" id="js" alt="Image of JavaScript logo">
       <p>JavaScript!</p>
@@ -77,5 +80,4 @@
       <img src="img/python.png" id="python" alt="Image of Python logo">
       <p>Python!</p>
     </div>
-  </div>
 </body>
