Apply jQuery to call functions on hidden divs.

--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@
           <option value="3">Option 3</option>
         </h2>
       </select>
-      <h1>First Question</h1>
-      <select class="form-control-lg" id="firstQuestion">
-        <h2>
-          <option value="0">--</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
-        </h2>
-      </select>
       <h1>Second Question</h1>
       <select class="form-control-lg" id="secondQuestion">
         <h2>
@@ -59,6 +50,24 @@
       </select>
       <h1>Third Question</h1>
       <select class="form-control-lg" id="thirdQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+      <h1>Forth Question</h1>
+      <select class="form-control-lg" id="fourthQuestion">
+        <h2>
+          <option value="0">--</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
+        </h2>
+      </select>
+      <h1>Fifth Question</h1>
+      <select class="form-control-lg" id="fifthQuestion">
         <h2>
           <option value="0">--</option>
           <option value="1">Option 1</option>
