WIP: adding content to quiz on the index.html

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
       they know it or not.</h2>
     <h2>Simply fill out our custom tailored questionnaire to find out yours:</h2>
     <div class="quiz">
-      <h1>First Question</h1>
+      <h1>What is your idea of a "perfect day"?</h1>
       <select class="form-control-lg" id="firstQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
+          <option value="1">Sleeping in, having a cup of coffee in bed while catching up on your favorite show</option>
+          <option value="2">Getting on stage to perform an original song in front of hundreds of adoring fans</option>
+          <option value="3">Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
         </h2>
       </select>
-      <h1>Second Question</h1>
+      <h1>Which famous figure, dead or alive, would you have dinner with?</h1>
       <select class="form-control-lg" id="secondQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
+          <option value="1">Your future self</option>
+          <option value="2">Your great-great-grandparent whose one regret in life was not living long enough to meet you</option>
+          <option value="3">vh1's The Pickup Artist, "Mystery"</option>
         </h2>
       </select>
-      <h1>Third Question</h1>
+      <h1>If you had only three days left to live, what's the one destination you would visit?</h1>
       <select class="form-control-lg" id="thirdQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Option 1</option>
-          <option value="2">Option 2</option>
-          <option value="3">Option 3</option>
+          <option value="1">The Metropolitan Museum of Art</option>
+          <option value="2">The set of the hit 90's sit-com, "Seinfeld"</option>
+          <option value="3">Sbarro</option>
         </h2>
       </select>
       <h1>Forth Question</h1>
