--- a/index.html
+++ b/index.html
@@ -34,45 +34,45 @@
       <select class="form-control-lg" id="firstQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Sleeping in, having a cup of coffee in bed while catching up on your favorite show</option>
-          <option value="2">Getting on stage to perform an original song in front of hundreds of adoring fans</option>
-          <option value="3">Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
+          <option value="1">- Sleeping in, having a cup of coffee in bed while catching up on your favorite show</option>
+          <option value="2">- Performing for a crowd of adoring fans</option>
+          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
         </h2>
       </select>
       <h1>Which famous figure, dead or alive, would you have dinner with?</h1>
       <select class="form-control-lg" id="secondQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Your future self</option>
-          <option value="2">Your great-great-grandparent whose one regret in life was not living long enough to meet you</option>
-          <option value="3">vh1's The Pickup Artist, "Mystery"</option>
+          <option value="1">- Your future self</option>
+          <option value="2">- Randy's late grandmother, whom you've heard so much about</option>
+          <option value="3">- vh1's The Pickup Artist, "Mystery"</option>
         </h2>
       </select>
       <h1>If you had only three days left to live, what's the one destination you would visit?</h1>
       <select class="form-control-lg" id="thirdQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">The Metropolitan Museum of Art</option>
-          <option value="2">The set of the hit 90's sit-com, "Seinfeld"</option>
-          <option value="3">Sbarro</option>
+          <option value="1">- The Metropolitan Museum of Art</option>
+          <option value="2">- The set of the hit 90's sit-com, "Seinfeld"</option>
+          <option value="3">- Sbarro</option>
         </h2>
       </select>
       <h1>What is your absolute dream job?</h1>
       <select class="form-control-lg" id="fourthQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Web Developer!</option>
-          <option value="2">Owning your own business. Ideally, one that generates enough revenue to fly under the radar, while you use it to launder the dirty money your neighbor has coerced you into processing for them</option>
-          <option value="3">Dog groomer</option>
+          <option value="1">- Web Developer!</option>
+          <option value="2">- Laundering your neighbor's dirty money due to coercion</option>
+          <option value="3">- Dog groomer</option>
         </h2>
       </select>
       <h1>What word, or idea, do you associate with "success":</h1>
       <select class="form-control-lg" id="fifthQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">Money</option>
-          <option value="2">Your Mom</option>
-          <span class="wordBreak"><option value="3">That time, in the 1940 animated film "Pinocchio," when the wooden-puppet-turned-real-boy visits Pleasure Island where he can finally be his <em>true</em> self: a drunk donkey.</option></span>
+          <option value="1">- Money</option>
+          <option value="2">- Your Mom</option>
+          <span class="wordBreak"><option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk donkey.</option></span>
         </h2>
       </select>
     </div>
