Reformat/restyle index to be organized into cards.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <div class="header">
         <h1>Interested in coding?</h1>
         <div class="centerMed">
-          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding
-            language to learn.</p>
+          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding language to learn.</p>
         </div>
       </div>
       <span class="pushRight">
@@ -24,19 +23,40 @@
       </span>
     </div>
     <img src="img/code2.jpg" class="headImage" at="photo of on-screen code up close">
-    <h1>Many prospective coders expend unnecessary time and energy stressing about choosing a language: <span
-        class="medFont">until now</span></h1>
-    <h2>We have developed a truly unique questionnaire that pairs users to the language that is best for them, whether
-      they know it or not.</h2>
-    <h2>Simply fill out our custom tailored questionnaire to find out yours:</h2>
+    <div class="card">
+      <div class="card-body">
+        <h1 class="card-title">Why?</h1>
+        <ul class="card-text">
+          <li>Many prospective coders expend unnecessary time and energy stressing about choosing a language</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <h1 class="card-title">How?</h1>
+        <ul class = "card-text">
+          <li>We have developed a <span class="medFont">truly unique</span> questionnaire that pairs users to the language that is best for them, whether they know it or not.</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card">
+      <div class ="card-body">
+        <h1 class ="card-title">When?</h1>
+        <ul class = "card-text">
+          <li><span class ="medFont">Right Now!</span> Simply fill out our custom tailored questionnaire below to find out yours:</li>
+        </ul>
+      </div>
+    </div>
     <div class="quiz">
       <h1>What is your idea of a "perfect day"?</h1>
       <select class="form-control-lg" id="firstQuestion">
         <h2>
           <option value="0">--</option>
-          <option value="1">- Sleeping in, having a cup of coffee in bed while catching up on your favorite show</option>
+          <option value="1">- Sleeping in, having a cup of coffee in bed while catching up on your favorite show
+          </option>
           <option value="2">- Performing for a crowd of adoring fans</option>
-          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
+          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's
+            cinnamon pretzel</option>
         </h2>
       </select>
       <h1>Which famous figure, dead or alive, would you have dinner with?</h1>
@@ -72,7 +92,10 @@
           <option value="0">--</option>
           <option value="1">- Money</option>
           <option value="2">- Your Mom</option>
-          <span class="wordBreak"><option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk donkey.</option></span>
+          <span class="wordBreak">
+            <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a
+              drunk donkey.</option>
+          </span>
         </h2>
       </select>
     </div>
