WIP: custom styling of index elements and additons to stylesheet.

--- a/index.html
+++ b/index.html
@@ -11,40 +11,33 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron">
       <div class="header">
         <h1>Interested in coding?</h1>
         <div class="centerMed">
-          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding language to learn.</p>
+          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding
+            language to learn.</p>
         </div>
       </div>
       <span class="pushRight">
         <h1>We can help!</h1>
       </span>
-    </div>
-    <img src="img/code2.jpg" class="headImage" at="photo of on-screen code up close">
+    <img src="img/code1.jpg" class="headImage" at="photo of on-screen code up close">
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">Why?</h1>
-        <ul class="card-text">
-          <li>Many prospective coders expend unnecessary time and energy stressing about choosing a language</li>
-        </ul>
+        <p class="card-text">Many prospective coders expend unnecessary time and energy stressing about choosing a language</p>
       </div>
     </div>
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">How?</h1>
-        <ul class = "card-text">
-          <li>We have developed a <span class="medFont">truly unique</span> questionnaire that pairs users to the language that is best for them, whether they know it or not.</li>
-        </ul>
+        <p class="card-text">We have developed <span class="medFont">truly unique</span> method that pairs users to the language best suited for them</p>
       </div>
     </div>
     <div class="card">
-      <div class ="card-body">
-        <h1 class ="card-title">When?</h1>
-        <ul class = "card-text">
-          <li><span class ="medFont">Right Now!</span> Simply fill out our custom tailored questionnaire below to find out yours:</li>
-        </ul>
+      <div class="card-body">
+        <h1 class="card-title">When?</h1>
+        <p class="card-text"><span class="medFont">Right Now!</span> Simply fill out our expert tailored questionnaire below</p>
       </div>
     </div>
     <div class="quiz">
@@ -55,8 +48,7 @@
           <option value="1">- Sleeping in, having a cup of coffee in bed while catching up on your favorite show
           </option>
           <option value="2">- Performing for a crowd of adoring fans</option>
-          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's
-            cinnamon pretzel</option>
+          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
         </h2>
       </select>
       <h1>Which famous figure, dead or alive, would you have dinner with?</h1>
@@ -92,10 +84,7 @@
           <option value="0">--</option>
           <option value="1">- Money</option>
           <option value="2">- Your Mom</option>
-          <span class="wordBreak">
-            <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a
-              drunk donkey.</option>
-          </span>
+          <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk donkey.</option>
         </h2>
       </select>
     </div>
@@ -112,4 +101,5 @@
       <img src="img/python.png" id="python" alt="Image of Python logo">
       <p>Python!</p>
     </div>
+  </div>
 </body>
