--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p class="card-text"><span class="medFont">Right Now!</span> Simply fill out our expert tailored questionnaire below</p>
       </div>
     </div>
-    <div class="quiz">
+    <div class="box">
       <h1>What is your idea of a "perfect day"?</h1>
       <select class="form-control-lg" id="firstQuestion">
         <h2>
@@ -87,15 +87,34 @@
           <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk donkey.</option>
         </h2>
       </select>
+      <button class="btn-light" id="submitButton">Get Results</button>
     </div>
-    <button type="submit" id="submitButton">Get Results</button>
     <div id="result1">
-      <img src="img/javascript.png" id="js" alt="Image of JavaScript logo">
-      <p>JavaScript!</p>
+      <div class="boxResults">
+        <span class ="jsImage"><img src="img/javascript.png" id="js" alt="Image of JavaScript logo"></span>
+        <h1>JavaScript!</h1>
+        <h2>Congratulations! Our world class technology has decided that JavaScript is the best language for you.</h2>
+        <p>We determined this by considering your following attributes:</p>
+          <ul>
+            <li>You are, unfortunately, extremely basic - a default almost - just like JavaScript!</li>
+            <li>JavaScript is the default language of the internet, and boy are you the default shell of a human</li>
+            <li>You are very predictable and constant, just like a never-changing variable in JavaScript</li>
+          </ul>
+        <h1>We're so happy for you to begin your predictable little life!</h1>
+      </div>
     </div>
     <div id="result2">
+      <div class="boxResults">
       <img src="img/c.png" id="c" alt="Image of C# logo">
-      <p>C#!</p>
+      <h1>C#!</h1>
+        <h2>Congratulations! Our world class technology has decided that C# is the best language for you.</h2>
+        <p>We determined this by considering your following attributes:</p>
+          <ul>
+            <li>You are a little freak who can't be bothered to waste any time, you need to be as efficient as possible (just like C#!) so you can get back to your freaky little life (not like C#.)</li>
+            <li>C# is hyper-focused on developer productivity, just like how you are hyper focused on anything freaky</li>
+            <li>C# is extremely mature - 21 years old! - just like you. Well, maybe like you long ago... not now, now you are just old, not mature.</li>
+          </ul>
+        <h1>We're so happy for you to begin your predictable little life!</h1>
     </div>
     <div id="result3">
       <img src="img/python.png" id="python" alt="Image of Python logo">
