BUGFIX: all hidden divs reveal with full content.

--- a/index.html
+++ b/index.html
@@ -11,33 +11,36 @@
 
 <body>
   <div class="container">
-      <div class="header">
-        <h1>Interested in coding?</h1>
-        <div class="centerMed">
-          <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding
-            language to learn.</p>
-        </div>
+    <div class="header">
+      <h1>Interested in coding?</h1>
+      <div class="centerMed">
+        <p>Taking the step to learn how to code is a big one, but even just as big, is choosing <em>which</em> coding
+          language to learn.</p>
       </div>
-      <span class="pushRight">
-        <h1>We can help!</h1>
-      </span>
+    </div>
+    <span class="pushRight">
+      <h1>We can help!</h1>
+    </span>
     <img src="img/code1.jpg" class="headImage" at="photo of on-screen code up close">
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">Why?</h1>
-        <p class="card-text">Many prospective coders expend unnecessary time and energy stressing about choosing a language</p>
+        <p class="card-text">Many prospective coders expend unnecessary time and energy stressing about choosing a
+          language</p>
       </div>
     </div>
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">How?</h1>
-        <p class="card-text">We have developed <span class="medFont">truly unique</span> method that pairs users to the language best suited for them</p>
+        <p class="card-text">We have developed <span class="medFont">truly unique</span> method that pairs users to the
+          language best suited for them</p>
       </div>
     </div>
     <div class="card">
       <div class="card-body">
         <h1 class="card-title">When?</h1>
-        <p class="card-text"><span class="medFont">Right Now!</span> Simply fill out our expert tailored questionnaire below</p>
+        <p class="card-text"><span class="medFont">Right Now!</span> Simply fill out our expert tailored questionnaire
+          below</p>
       </div>
     </div>
     <div class="box">
@@ -48,7 +51,8 @@
           <option value="1">- Sleeping in, having a cup of coffee in bed while catching up on your favorite show
           </option>
           <option value="2">- Performing for a crowd of adoring fans</option>
-          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon pretzel</option>
+          <option value="3">- Going to the mall, shoplifting jewlery from Macy's, and enjoying an Auntie Anne's cinnamon
+            pretzel</option>
         </h2>
       </select>
       <h1>Which famous figure, dead or alive, would you have dinner with?</h1>
@@ -84,41 +88,53 @@
           <option value="0">--</option>
           <option value="1">- Money</option>
           <option value="2">- Your Mom</option>
-          <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk donkey.</option>
+          <option value="3">- That time when Pinocchio goes to Pleasure Island and is his <em>true</em> self: a drunk
+            donkey.</option>
         </h2>
       </select>
       <button class="btn-light" id="submitButton">Get Results</button>
     </div>
+    <div id="result3">
+      <div class="boxResults">
+        <img src="img/python.png" id="python" alt="Image of Python Logo">
+        <h1>PYTHON</h1>
+        <h2>Congratulations! Our world class technology has decided that Python is the best language for you.</h2>
+        <p>We determined this by considering your following attributes:</p>
+        <ul>
+          <li>Unfortunately for you, everyone really loves to use you - just like Python!</li>
+          <li>Python is one of the most popular languages being used now across multiple industries!</li>
+          <li>You are <em>all</em> over the place, worming around like a little - hey - python!</li>
+        </ul>
+        <h1>We're so happy for you to begin on your wormy little way!</h1>
+      </div>
+    </div>
     <div id="result1">
       <div class="boxResults">
-        <span class ="jsImage"><img src="img/javascript.png" id="js" alt="Image of JavaScript logo"></span>
+        <img src="img/javascript.png" id="js" alt="Image of JavaScript logo">
         <h1>JavaScript!</h1>
         <h2>Congratulations! Our world class technology has decided that JavaScript is the best language for you.</h2>
         <p>We determined this by considering your following attributes:</p>
-          <ul>
-            <li>You are, unfortunately, extremely basic - a default almost - just like JavaScript!</li>
-            <li>JavaScript is the default language of the internet, and boy are you the default shell of a human</li>
-            <li>You are very predictable and constant, just like a never-changing variable in JavaScript</li>
-          </ul>
+        <ul>
+          <li>You are, unfortunately, extremely basic - a default almost - just like JavaScript!</li>
+          <li>JavaScript is the default language of the internet, and boy are you the default shell of a human</li>
+          <li>You are very predictable and constant, just like a never-changing variable in JavaScript</li>
+        </ul>
         <h1>We're so happy for you to begin your predictable little life!</h1>
       </div>
     </div>
     <div id="result2">
       <div class="boxResults">
-      <img src="img/c.png" id="c" alt="Image of C# logo">
-      <h1>C#!</h1>
+        <img src="img/c.jpg" id="c" alt="Image of C# logo">
+        <h1>C#!</h1>
         <h2>Congratulations! Our world class technology has decided that C# is the best language for you.</h2>
         <p>We determined this by considering your following attributes:</p>
-          <ul>
-            <li>You are a little freak who can't be bothered to waste any time, you need to be as efficient as possible (just like C#!) so you can get back to your freaky little life (not like C#.)</li>
-            <li>C# is hyper-focused on developer productivity, just like how you are hyper focused on anything freaky</li>
-            <li>C# is extremely mature - 21 years old! - just like you. Well, maybe like you long ago... not now, now you are just old, not mature.</li>
-          </ul>
-        <h1>We're so happy for you to begin your predictable little life!</h1>
-    </div>
-    <div id="result3">
-      <img src="img/python.png" id="python" alt="Image of Python logo">
-      <p>Python!</p>
+        <ul>
+          <li>You are a little freak who can't be bothered to waste any time, you need to be as efficient as possible (just like C#!) so you can get back to your freaky little life (not like C#.)</li>
+          <li>C# is hyper-focused on developer productivity, just like how you are hyper focused on anything freaky</li>
+          <li>C# is extremely mature - 21 years old! - just like you. Well, maybe like you long ago... not now, now you are just old, not mature.</li>
+        </ul>
+        <h1>We're so happy for you to begin your freaky, focused life!</h1>
+      </div>
     </div>
   </div>
 </body>
