Add final touches on index and custom stylesheet.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           language to learn.</p>
       </div>
     </div>
-    <span class="pushRight">
+    <div class="boxUpper">
       <h1>We can help!</h1>
-    </span>
+    </div>
     <img src="img/code1.jpg" class="headImage" at="photo of on-screen code up close">
     <div class="card">
       <div class="card-body">
